[vue] fix spinner z-index #5745

--- a/assets/scss/spinner.sass
+++ b/assets/scss/spinner.sass
@@ -14,7 +14,6 @@
     display: flex
 
   &.is-full-page
-    z-index: 9999
     position: fixed
 
   .vld-background
@@ -24,6 +23,7 @@
     right: 0
     top: 0
     background: #0B2D48
+    z-index: 1000002 !important
     opacity: 1
 
 .vld-icon
